Made use of the buttonBackgroundColor variable in attrs.xml file

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,6 +2,6 @@
 <resources>
     <declare-styleable name="LoadingButton">
         <attr name="text" format="string" />
-        <attr name="backgroundColor1" format="string" />
+        <attr name="buttonBackgroundColor" format="string" />
     </declare-styleable>
 </resources>
